...
    title: String,
    modifier: Modifier = Modifier,
    navigationIcon: @Composable () -> Unit = {},
    actions: @Composable RowScope.() -> Unit = {},
) {
    TopAppBar(
        title = { Text(title, modifier = Modifier.testTag("appTopBarTitle")) },
        navigationIcon = navigationIcon,
        actions = actions,
        modifier = modifier
    )
}

@Composable
fun MenuNavigationIcon(onMenuClick: () -> Unit) {
    IconButton(onClick = onMenuClick) {
        Icon(Icons.Default.Menu, contentDescription = "Abrir menú")
    }
}

@Composable
fun BackNavigationIcon(onBack: () -> Unit) {
    IconButton(onClick = onBack) {
        Icon(Icons.AutoMirrored.Filled.ArrowBack, contentDescription = "Volver")
    }
}

@Composable
fun CloseNavigationIcon(onClose: () -> Unit) {
    IconButton(onClick = onClose) {
...
